_sass/layout/_entries.scss
.entry-container {
  padding: 40px 0;
  border-top: 1px solid #ddd;

  &:first-of-type {
    padding-top: 0;
    border: none;
  }

  &:last-of-type {
    padding-bottom: 0;
  }
}

.entry-date {
  font-size: calc-em(12px);
  color: #bbb;
}

.entry-title {
  margin: 8px 0 24px;
  font: normal calc-em(22px) $heading;

  a {
    text-decoration: none;
    border: none;
    color: #222;

    &:hover,
    &:focus {
      text-decoration: none;
      border: none;
      color: $primary;
    }
  }
}

.entry-intro {
  margin-bottom: 25px;

  p {
    font-size: calc-em(14px);
    line-height: 1.5;
    color: #333;
  }

  a {
    text-decoration: none;
    border-bottom: 1px solid #ddd;
    color: $primary;

    &:hover,
    &:focus {
      text-decoration: none;
      border-bottom: 1px solid $primary;
    }
  }
}

.entry-content {
  h2 {
    margin: 32px 0 16px;
    font-size: calc-em(14px);
  }

  h3 {
    margin: 16px 0 4px;
    font-size: calc-em(12px);
  }

  p {
    margin-top: 0;
    margin-bottom: 16px;
    font-size: calc-em(12px);
    line-height: 1.6;
    color: #6d6d6d;
  }

  ol {
    padding: 0 40px;
    list-style: decimal;
  }

  ul {
    padding: 0 40px;
    list-style: square;
  }

  li {
    margin-bottom: 8px;
    font-size: calc-em(12px);
    line-height: 1.5;
    color: #6d6d6d;
  }

  a {
    text-decoration: none;
    border-bottom: 1px solid #ddd;
    color: $primary;

    &:hover,
    &:focus {
      text-decoration: none;
      border-bottom: 1px solid $primary;
    }
  }

  pre {
    padding: 6px 12px;
    text-align: left;
    font-size: calc-em(12px);
    line-height: 1.6;
    background-color: #f6f6f6;
    border: 1px solid #eaeaea;
    color: #333;
  }

  // Always remove bottom margin from child last element
  > :last-child {
    margin-bottom: 0;
  }
}

.older-posts {
  margin: 0 0 40px;
  font-weight: bold;
  font-size: calc-em(14px);

  a {
    text-decoration: none;
    color: #222;
  }
}

